--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:y4fn2sT8/RJfqJGmnjzE0+getrWPcq2CiNfdrW5HUGA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -25,9 +25,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=members
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
